# ai-summarizer

./: Cargo.toml  README.md  system_prompt.txt
cleanup-bot/: Cargo.toml
cleanup-bot/src/: backup.rs  cancellation.rs  cancellation_registry.rs  cleanup.rs  command.rs  config.rs  main.rs  media.rs  scheduler.rs
cleanup-bot/src/backup/: queue.rs  worker.rs
cleanup-bot/src/cleanup/: queue.rs  task.rs
cleanup-bot/src/media/: attachment.rs  downloader.rs
cleanup-bot/src/onedrive/: auth.rs
dashboard/: Cargo.toml
dashboard/assets/: charts.css  main.css
dashboard/src/: background.rs  charts.rs  config.rs  dashboard_config.rs  main.rs  metrics.rs  paths.rs  registry.rs  routes.rs  state.rs  storage.rs  styles.rs  views.rs
dashboard/src/charts/: svg.rs
dashboard/src/views/: bot_detail.rs  bot_list.rs  breadcrumbs.rs  chart_actions.rs
expiry-bot/src/: main.rs
shared/src/: config.rs  tracing.rs
src/: main.rs
summarizer-bot/src/: config.rs  main.rs
