[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
maud = { version = "0.27.0", features = ["rocket"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1", features = ["time"] }
