[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["json"] }
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.49.0", features = ["time", "rt-multi-thread", "macros", "net"] }
toml = "1.0.1"
turf = "0.10.1"

[package.metadata.turf.class_names]
template = "<original_name>_<style_sheet_hash_short>"
